# stm32-bare-metal

./: .gitignore  README.md  core.S  meson.build  nob.c  stm32f070rb.ld
conf/: cross_linux_x86.ini
core/: meson.build  reset_handler.S  stm32f070rb.ld  vector_table.S
docs/: vscodium.md
sim/renode/: stm32f070rb_init.resc  stm32f070rb_model.repl
src/: main.c  meson.build
sys/: clock.c  clock.h  gpio.c  gpio.h  link_script.ld  memory_map.h  meson.build  metadata.h  reset_handler.S  timer.c  timer.h
sys/os/: scheduler.h  systick_interface.h
